# anls_star_metric

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_dev.txt  requirements_test.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: python-app.yml  release.yml  test.yml
scripts/: publish.sh  run.sh  run_die.sh  run_qa.sh
src/: __init__.py  anls_star.py  benchmark_doc_vqa.py  benchmark_kleister_charity.py  benchmark_kleister_nda.py  benchmark_mp_doc_vqa.py  benchmark_sroie.py  benchmark_vrdu_ad_buy.py  benchmark_vrdu_registration.py  key_scores_utils.py
src/anls_star/: __init__.py  anls_star.py  benchmark_doc_vqa.py  benchmark_kleister_charity.py  benchmark_kleister_nda.py  benchmark_mp_doc_vqa.py  benchmark_sroie.py  benchmark_vrdu_ad_buy.py  benchmark_vrdu_registration.py  key_scores_utils.py
src/anls_star/utils/: __init__.py  json_parser.py  latin.py  misc.py  vision.py
src/utils/: __init__.py  json_parser.py  latin.py  misc.py
tests/: test_anls_star.py  test_key_scores_utils.py
